# rust-rocket-webapp-example

./: .env.template  Cargo.toml  README.md
src/: lib.rs  main.rs
src/controllers/: mod.rs  session_controller.rs  web_controller.rs
src/db/postgres/: postgres_db.rs
src/db/postgres/migrations/: 0002_create_user_sessions.up.sql  0003_create_challenge_tokens.down.sql  0003_create_challenge_tokens.up.sql
src/db/postgres/models/: challenges_model.rs  mod.rs  users_model.rs
src/db/postgres/scripts/: migrate.rs  rollback_full.rs
src/test/: request.rs
src/util/: rand.rs
