[package]
name = "indiefuture-backend-rust"
version = "0.1.0"
edition = "2021"
default-run = "server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = { version = "=0.5.0-rc.3", features=["json","uuid"] }
 

reqwest = { version = "0.11", features = ["json"] }


parking_lot = "0.12.1"
futures = "0.3.28"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.96"
tokio-postgres-migration = "0.1.0"
tokio-postgres = { version = "0.7.8" ,  features=["with-chrono-0_4"] } 
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"] }


dotenvy = "0.15"
env_logger = "0.10.0"
log = "0.4.18"
include_dir = "0.7.3"
inquire = "0.6.2"
uuid = { version = "1.4.1", features = ["v4","fast-rng"] }

#sign in with ethereum 
siwe = "0.6"
chrono = "0.4.31"
rand = "0.8.5"
ethers = "2.0.10"



[lib]
name = "indiefuture_backend"

# cargo run --bin migrate
[[bin]]
name = "migrate"
path = "src/db/postgres/scripts/migrate.rs"

[[bin]]
name = "rollback_full"
path = "src/db/postgres/scripts/rollback_full.rs"


[[bin]]
name = "test"
path = "src/test/request.rs"


[[bin]]
name = "server"
path = "src/main.rs"
